config: set a compile time default for the main.plugins configuration option

In case of a missing NetworkManager.conf (or a missing configuration option
main.plugins), allow to determine the fallback at compile time

https://bugzilla.gnome.org/show_bug.cgi?id=738611

Signed-off-by: Thomas Haller <thaller@redhat.com>
(cherry picked from commit 4545b6cb1e87d1262ece4a3def17b74af4062758)